--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1,11 +1,53 @@
 .add-receipt {
     width: 100%;
-    height: 250px;
+    height: 300px;
     background-color: #f1f3f5;
     border: 1px solid #dee2e6;
     font-size: 60px;
     text-align: center;
-    line-height: 250px;
+    line-height: 300px;
     box-shadow: inset 0px 0px 15px 0px rgba(0,0,0,0.05);
-    color: #868e96
+    color: #868e96;
+}
+
+.receipt-preview, .add-receipt {
+    margin-bottom: 2rem;
+}
+
+.receipt-preview {
+    width: 100%;
+    height: 300px;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    padding: 2em 2.5em;
+}
+
+.receipt-preview .receipt-date {
+    font-weight: 300;
+    color: #868e96;
+    float: right;
+}
+
+.receipt-preview .receipt-total {
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+    line-height: 3em;
+}
+
+.receipt-preview .receipt-complete {
+    width: 100%;
+    font-size: 60px;
+    text-align:center;
+    position:absolute;
+    left: 0;
+    bottom: 2.5rem;
+}
+
+.receipt-preview .receipt-icon {
+    font-size: 25px;
+}
+
+.receipt-preview .receipt-progress {
+    width: 85%
 }
