--- a/client/public/css/Custom.css
+++ b/client/public/css/Custom.css
@@ -130,6 +130,17 @@ body {
   background-color: #f1f3f5;
 }
 
+.payer-list .list-group-item.selected .remove-btn {
+  border-radius: 100%;
+  vertical-align: middle;
+  font-size: 12px;
+  height: 20px;
+    width: 20px;
+    display: inline-block;
+    line-height: 20px;
+    text-align: center;
+}
+
 .payer-list .list-group-item.selected:after,
 .payer-list .list-group-item.selected:before {
   left: 100%;
