--- a/client/public/css/Custom.css
+++ b/client/public/css/Custom.css
@@ -147,12 +147,13 @@ body {
 .payer-list .list-group-item.selected .remove-btn {
   border-radius: 100%;
   vertical-align: middle;
-  font-size: 12px;
+  font-size: 10px;
   height: 20px;
     width: 20px;
     display: inline-block;
     line-height: 20px;
     text-align: center;
+    padding-left: 1px;
 }
 
 .payer-list .list-group-item.selected:after,
@@ -178,6 +179,18 @@ body {
   border-left-color: #dee2e6;
   border-width: 9px;
   margin-top: -9px;
+}
+
+.payer-list .list-group-item .cancel-payer {
+  opacity: 0;
+}
+
+.payer-list .list-group-item.selected .cancel-payer {
+  opacity: 1;
+  color: #868e96;
+  float: right;
+  font-size: 12px;
+  line-height: 24px;
 }
 
 .payer-list .add-payer {
