--- a/client/public/assets/css/Custom.css
+++ b/client/public/assets/css/Custom.css
@@ -14,6 +14,11 @@ body {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
 }
 
+.navbar .navbar-brand img {
+  height: 30px;
+  width: auto;
+}
+
 .navbar .nav-link {
   color: #fff;
 }
