--- a/client/public/assets/css/Custom.css
+++ b/client/public/assets/css/Custom.css
@@ -418,7 +418,14 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
+  padding: 1.5em 0;
   text-align: center;
+}
+
+footer a {
+  color: #fff;
+}
+
+footer small a {
+  text-decoration: underline;
 }
